@@ -352,7 +352,7 @@ static int r_enum_tree(enumCookie *ck, struct berval *path,
 		} else {
 		/* Queueing up for tool mode */
 			if(ck->entries == NULL) {
-				ck->entries = (Entry **) SLAP_MALLOC(sizeof(Entry *) * ENTRY_BUFF_INCREMENT);
+				ck->entries = (Entry **) ch_malloc(sizeof(Entry *) * ENTRY_BUFF_INCREMENT);
 				ck->elen = ENTRY_BUFF_INCREMENT;
 			}
 			if(ck->eind >= ck->elen) { /* grow entries if necessary */	
