@@ -12,6 +12,7 @@ OpenLDAP 2.3.21 Release
 	Fixed slapd "threads" config value checking (ITS#4433)
 	Fixed slapd connection index bound check (ITS#4449)
 	Fixed slapd connection cleanup (ITS#4465)
+	Fixed slapd slap_realloc misuse (ITS#4477)
 	Fixed slapd-ldbm crash on modify bug (ITS#4464)
 	Fixed slapd-ldap potential bind deadlock (ITS#4409)
 	Fixed slapd-ldap/meta conn expiration concurrency (ITS#4429)
